listDirectory appeared in directory-1.2.5
also withCurrentDirectory in 1.2.3

--- a/stack-clean-old.cabal
+++ b/stack-clean-old.cabal
@@ -26,7 +26,7 @@ executable stack-clean-old
   other-modules:       Paths_stack_clean_old
 --  hs-source-dirs:      app
   build-depends:       base < 5
-                     , directory
+                     , directory >= 1.2.5
                      , extra
                      , filepath
                      , simple-cmd >= 0.1.4
