--- a/stack-clean-old.cabal
+++ b/stack-clean-old.cabal
@@ -29,6 +29,7 @@ executable stack-clean-old
                      , directory >= 1.2.5
                      , extra >= 1.4.3
                      , filepath
+                     , filemanip
                      , simple-cmd >= 0.1.4
                      , simple-cmd-args >= 0.1.2
   default-language:    Haskell2010
