--- a/stack-clean-old.cabal
+++ b/stack-clean-old.cabal
@@ -30,7 +30,7 @@ executable stack-clean-old
                        Snapshots
                        Versions
   hs-source-dirs:      src
-  build-depends:       base < 5
+  build-depends:       base >= 4.8 && < 5
                      , directory >= 1.2.5
                      , extra >= 1.4.3
                      , filepath
