simplify dry run output, use simple-prompt yesNo and simple-cmd +-+
based on experience from Stackage server

Previously was giving output like:

$ env STACK_ROOT=$PWD/work/stack/ stack-clean-old remove 9.4
all stack ghc 9.4 installations:  would be deleted
ghc-tinfo6-9.4.4 compiler would be removed
ghc-tinfo6-9.4.5 compiler would be removed
ghc-tinfo6-9.4.6 compiler would be removed
all 9.4 builds would be deleted
all 9.4 builds would be deleted
x86_64-linux-tinfo6:
all 9.4 builds would be deleted
1 dir in work/stack/snapshots/x86_64-linux-tinfo6 would be removed for 9.4.6

(use --delete (-d) for removal)

--- a/stack-lts12.yaml
+++ b/stack-lts12.yaml
@@ -1,5 +1,6 @@
 resolver: lts-12.26
 
 extra-deps:
-- simple-cmd-args-0.1.2
-- simple-cmd-0.1.4
+  - simple-cmd-args-0.1.2
+  - simple-cmd-0.1.4
+  - simple-prompt-0.2.1
