--- a/stack-clean-old.cabal
+++ b/stack-clean-old.cabal
@@ -40,6 +40,7 @@ executable stack-clean-old
                      , filemanip
                      , simple-cmd >= 0.1.4
                      , simple-cmd-args >= 0.1.2
+                     , simple-prompt >= 0.2
   default-language:    Haskell2010
   ghc-options:         -Wall
   if impl(ghc >= 8.0)
